# library_management

./: .example.env  .gitignore  pyproject.toml  readme.md
app/adapters/sqlalchemy_db/: gateway.py
app/adapters/sqlalchemy_db/migrations/: env.py
app/adapters/sqlalchemy_db/migrations/versions/: 20241123-181313_b9b93c28f276_create_books_table.py  20241125-093115_f5bbf45c07a3_create_books_table.py
app/adapters/sqlalchemy_db/models/: __init__.py  book.py
app/application/: book_service.py  commands.py
app/application/models/: __init__.py  book.py
app/application/protocols/: __init__.py  database.py
app/cli/: commands.py
app/main/: commands.py  di.py  main.py  setup.py
tests/: conftest.py  test_add.py  test_delete.py  test_list_books.py  test_search.py  test_update_status.py
